# SmartBroadcasting4K_C

./: CMakeLists.txt  README.md
1/: build_pipeline.sh  config.yaml  interfaces.h  kalman_predictor.cpp  main_pipeline.cpp  serial_gimbal.cpp
include/: camera_producer.h  common.h  detection_consumer.h  detection_queue.h  kalman_predictor.h  prediction_manager.h  ptz_controller.h  ptz_tcp_controller.h  ring_buffer.h
src/: camera_producer.cpp  cuda_kernels.cu  detection_consumer.cpp  main.cpp  prediction_manager.cpp  prediction_test.cpp  ptz_controller.cpp  ptz_tcp_controller.cpp
transformation/: onnx_to_engine.bash  pt_to_onnx.py  pth_to_json.py
